2005-03-11  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

 * src/sitepage.cpp: Update some text on UI elements.
 
 * src/view/telnetview.cpp (CTelnetView::OnLButtonUp): Prevent 
 sending mouse action when the user clicked on hyperlinks.
 
 * src/mainframe.cpp: Move "About" toolbutton to the right of 
 toolbar.
 
 * po/zh_TW.po: Update zh_TW locale.
 
 * configure.ac: Bump version number to 0.3.4

2005-03-11  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp (CTermView::OnLButtonDown),
	src/view/telnetview.cpp (CTelnetView::OnLButtonUp): Prevent 
	unnecessary mouse action when canceling selection.

2006-03-05  Youchen Lee  <copyleft@utcr.org>

	* src/view/telnetview.cpp, src/view/telnetview.h
	(CAppConfig::OnMouseScroll), (CAppConfig::OnLButtonUp): Make
	mozilla-plugin compile available. ( Need someone to check it again.)

2006-02-27  Jim Huang  <jserv@kaffe.org>

	* src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::SetToDefault),
	src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage)
	(CGeneralPrefPage::OnOK): Fixlet to compilation if mouse support is
	disabled.

2006-02-26  Chia-I Wu  <b90201047@ntu.edu.tw>

	* src/core/font.cpp (CFont::RecalculateMetrics): Lock may fail.

2006-02-24  Emfox Zhou  <emfoxzhou@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Update my name, complete zh_CN.po.

2006-02-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: Move runtime Mouse Support switch to Preference,
	so it's savable now.

2006-02-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: also, translation of toolbar tooltips back.

2006-02-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: Fix popup menu, add tooltips back to toolbar.

2006-02-22  Jim Huang  <jserv@kaffe.org>

	* src/docklet/eggtrayicon.h,
	src/docklet/eggtrayicon.c (egg_tray_icon_manager_filter)
	(egg_tray_icon_update_manager_window)
	(egg_tray_icon_manager_window_destroyed) (egg_tray_icon_realize):